package at.technikum.tolanzeilinger.tourplanner.event;

public interface Subscriber {
    void update();
}
